2009-11-02  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Rewrite CSSSourceSyntaxHighlighter so it shares more code
        https://bugs.webkit.org/show_bug.cgi?id=30907

        * inspector/css-syntax-highlight-expected.txt: Added.
        * inspector/css-syntax-highlight.html: Added.
        * inspector/javascript-syntax-highlight-expected.txt:

2009-11-02  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Support ARIA "tab" roles
        https://bugs.webkit.org/show_bug.cgi?id=30842

        * accessibility/aria-controls-with-tabs-expected.txt: Added.
        * accessibility/aria-controls-with-tabs.html: Added.
        * accessibility/aria-tab-roles.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/accessibility/aria-tab-roles-expected.txt: Added.
        * platform/win/Skipped:

2009-11-02  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Dave Hyatt.

        Bug 28420 -  Implement HTML5 <ruby> rendering
        (https://bugs.webkit.org/show_bug.cgi?id=28420)

        First rudimentary implementation of HTML5 ruby rendering support.

        Further layout tests will be committed in a follow-up patch under fast/ruby.

        * fast/ruby/parse-rp-expected.txt: result changed due to <rt> being rendered as block within <ruby>

2009-11-01  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=30992
        Node.isDefaultNamespace doesn't convert empty strings to null

        * fast/dom/Node/default-namespace-empty-argument-expected.txt: Added.
        * fast/dom/Node/default-namespace-empty-argument.html: Added.

2009-11-01  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        Don't add '/' to the URL path if the it does not include '/' after the protocol component
        https://bugs.webkit.org/show_bug.cgi?id=30971
