@@ -1,0 +1,7 @@
+This tests that XPath expressions with prefixes work correctly.
+
+PASS //div
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
